real pipeline after some tests

--- a/action.yml
+++ b/action.yml
@@ -14,17 +14,23 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Install openmcx prerequisites
+      run: |
+        sudo apt update
+        sudo apt install -y cmake git
+        sudo apt install -y build-essential
+        sudo apt install -y python-is-python3
+        sudo apt install -y libxml2-dev zlib1g-dev
     - name: Checkout openmcx
       uses: actions/checkout@v4
-      with:
+      with: 
         repository: eclipse/openmcx
         path: 'openmcx'
-    - name: check available files
-      shell: bash
-      run: ls -la
-    - name: check base path#
-      shell: bash
-      run: pwd
-    - name: check
-      shell: bash
-      run: echo ${{ github.action_path }}
+    - name: build openmcx
+      working-directory: openmcx
+      run: ./build.sh
+    - name: run simulation
+      run: |
+        ssdFiles=(${{ inputs.ssd }})
+        nSimulations=${#ssdFiles[@]}
+        for ssdPath in ${ssdFiles[@]}; do ./openmcx/install/openmcx $ssdPath -v; done
